Fixed khan book being cut short higher than expected

--- a/blocks/khan/__book-container/khan__book-container.css
+++ b/blocks/khan/__book-container/khan__book-container.css
@@ -2,6 +2,6 @@
   display: flex;
   justify-content: flex-start;
   gap: 48px;
-  height: 450px;
+  height: 550px;
   margin-top: 68px;
 }
